# TopSpeed

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  vcpkg.json
.github/workflows/: build.yml  wasm.yml
docs/: BUILD.md
docs/plans/: 2025-01-02-build-modernization-design.md  2025-01-02-cmake-sdl2-implementation.md  2025-12-02-sdl2-audio-mixer-pitch-control.md  2025-12-02-wasm-infrastructure-design.md
vs_projects/Common/: CMakeLists.txt
vs_projects/Common/If/: Common.h  File.h  Mutex.h  TList.h  Types.h
vs_projects/Common/Src/: Algorithm.cpp  File.cpp  Mutex.cpp  Tracer.cpp
vs_projects/DxCommon/If/: Common.h  Defs.h  Game.h  Internal.h  Mesh.h  Music.h  Network.h
vs_projects/DxCommon/Src/: Input_SDL2.cpp  Sound_SDL2.cpp  Stubs_SDL2.cpp  Timer.cpp
vs_projects/common/: CMakeLists.txt
vs_projects/common/if/: Algorithm.h  Common.h  Window.h
vs_projects/common/src/: Algorithm.cpp  Common_Emscripten.cpp
vs_projects/dxcommon/: CMakeLists.txt
vs_projects/dxcommon/If/: Application.h  D3DFont.h  DIKCodes.h  Defs.h  Game.h  Input.h  Light.h  Mesh.h  Network.h  Particle.h  SDL2Compat.h  Sound.h
vs_projects/dxcommon/Src/: Common.cpp  Input_SDL2.cpp  Sound_SDL2.cpp  Stubs_SDL2.cpp  Timer.cpp  stb_vorbis_impl.c
vs_projects/topspeed/: CMakeLists.txt  ComputerPlayer.cpp  Game.cpp  Game.h  LevelMultiplayer.h  LevelTimeTrial.cpp  Main_SDL2.cpp  Multiplayer_Stubs.cpp  Multiplayer_Stubs.h  RaceClient.cpp  RaceClient.h  RaceServer.h  RaceSettings.cpp  StdAfx.h  TopSpeed.rc  Track.h  shell.html
